<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorNavigation"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView_nav_header"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:contentDescription="@string/nav_header_desc"
        android:layout_marginRight="30sp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:background="@drawable/nav_header_logo"/>

    <TextView
        android:id="@+id/textView_nav_header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imageView_nav_header"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="10sp"
        android:text="@string/nav_header_title"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imageView_nav_header"
        android:layout_below="@id/textView_nav_header_title"
        android:text="@string/nav_header_subtitle"
        android:textSize="10sp"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"/>

</RelativeLayout>
