<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="300sp"
        android:layout_height="40sp"

        android:layout_gravity="center"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="15sp"
        android:text="회원가입"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="18sp" />



    <TextView
        android:layout_width="300sp"
        android:layout_height="30sp"

        android:layout_gravity="center"
        android:text="@string/underline_pass"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="300sp"
        android:layout_height="1sp"
        android:layout_gravity="center"
        android:background="@android:color/black"
        android:layout_marginBottom="15sp"/>
    <TextView
        android:layout_width="300sp"
        android:layout_height="30sp"

        android:layout_gravity="center"
        android:text="이용 중이신 통신사를 선택하세요"
        android:textColor="@android:color/black"
        android:textSize="12sp"/>

    <ImageView
        android:layout_width="300sp"
        android:layout_height="200sp"
        android:layout_gravity="center"

        android:layout_marginBottom="15sp"
        android:src="@drawable/photo_authorization"
        android:scaleType="fitXY"
        />

    <RelativeLayout
        android:layout_width="300sp"
        android:layout_height="30sp"

        android:layout_gravity="center"
        android:layout_marginBottom="10sp">

        <CheckBox
            android:id="@+id/checkbox_agreeAll"
            android:layout_width="30sp"
            android:layout_height="30sp" />

        <TextView
            android:layout_width="250sp"
            android:layout_height="30sp"
            android:layout_toEndOf="@id/checkbox_agreeAll"
            android:gravity="center_vertical"
            android:text="본인확인을 하기 위한 필수사항에 전체동의합니다."
            android:textSize="12sp"
            android:textColor="@android:color/black"

            />



    </RelativeLayout>

    <RelativeLayout
    android:layout_width="250sp"
    android:layout_height="60sp"
        android:layout_gravity="center"
        android:layout_marginBottom="30sp"
        >
        <CheckBox
            android:id="@+id/checkbox_info"
            android:layout_width="100sp"
            android:layout_height="20sp"
            android:layout_marginRight="15sp"
            android:layout_marginBottom="10sp"
            android:text="@string/myinfo"
            android:textSize="10sp"
            android:checked="true"
            android:enabled="false"/>

        <CheckBox

            android:layout_width="120sp"
            android:layout_height="20sp"
            android:layout_toEndOf="@id/checkbox_info"
            android:text="@string/processinfo"
            android:textSize="10sp"
            android:checked="true"
            android:enabled="false"/>

        <CheckBox
            android:id="@+id/checkbox_serviceInfo"
            android:layout_width="100sp"
            android:layout_height="20sp"
            android:layout_marginRight="15sp"
            android:layout_below="@id/checkbox_info"
            android:text="@string/serviceinfo"
            android:textSize="10sp"
            android:checked="true"
            android:enabled="false"/>

        <CheckBox

            android:layout_width="120sp"
            android:layout_height="20sp"
            android:layout_below="@id/checkbox_info"
            android:layout_toEndOf="@id/checkbox_serviceInfo"
            android:text="@string/useinfo"
            android:textSize="10sp"
            android:checked="true"
            android:enabled="false"/>


    </RelativeLayout>
    <Button
        android:id="@+id/button_start"
        android:layout_width="300sp"
        android:layout_height="30sp"
        android:layout_gravity="center"
        android:layout_marginBottom="20sp"
        android:enabled="false"
        android:text="가입완료"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/warning"/>

    />

</LinearLayout>